--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
 
-<p>testing work</p>
+<h3>Endring for å teste git diff</h3>
+
+
 </body>
 </html>
